[tool.poetry]
name = "lundpy"
version = "0.1.0"
description = "A basic python package"
authors = ["krlb <krlb@lundbeck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
poethepoet = "^0.29.0"
mypy = "^1.13.0"

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "ANN", "COM", "RET", "ARG"]
ignore = []
exclude = ["venv", ".venv", "build", "dist", "solutions"]

[tool.ruff.per-file-ignores]
# Ignore missing type annotations in tests
"tests/*" = ["ANN"]

[tool.mypy]
python_version = 3.13
disallow_untyped_defs = true
exclude = "(solutions/)|(tests/)"

[tool.poe.tasks]

[tool.poe.tasks.run]
cmd = "uvicorn main:app --reload"
help = "Run the FastAPI application"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Lint the codebase with Ruff"

[tool.poe.tasks.format]
cmd = "ruff check . --fix"
help = "Automatically fix linting errors with Ruff"

[tool.poe.tasks.typecheck]
cmd = "mypy ."
help = "Run static type checking with MyPy"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
